# chess_gif

./: .gitignore  .readthedocs.yml  MANIFEST.in  Pipfile  README.md  create_frame.py  gif_maker.py  read_pgn.py  requirements.txt  setup.cfg  setup.py  tempCodeRunnerFile.py
.github/workflows/: python-package.yml  python-publish.yml
chess_gif/: constants.py  create_frame.py  gif_maker.py
chess_gif/data/pgn/: MikelOjda_vs_iDontTalkiDoIt_2020.03.19.pgn
data/pgn/: game_id_YPRLLL4C.json  lichess_pgn_2020.08.01_Mrunank_vs_amaa18.Q2RJXD4T.pgn
docs/: Installation.rst  chess_gif.rst  conf.py  create_frame.rst  generate_docs.bat  gif_maker.rst  index.rst  modules.rst  requirements.txt
docs/_build/doctrees/: chess_gif.doctree  create_frame.doctree  download_data.doctree  environment.pickle  gif_maker.doctree  index.doctree  modules.doctree  setup.doctree
docs/_build/html/: .buildinfo  create_frame.html  download_data.html  genindex.html  gif_maker.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: download_data.rst.txt  modules.rst.txt
docs/source/: conf.py  index.rst
docs/source/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
src/chess_gif/: __init__.py  constants.py  create_frame.py  download_data.py  gif_maker.py
src/chess_gif/data/pgn/: game_id_Vyx76Lee.json  lichess_pgn_2020.08.01_Mrunank_vs_Blindtakes34.E2og9BtO.pgn  lichess_pgn_2020.08.03_Mrunank_vs_prem_singh_bhati.gKZs5DjG.pgn
tests/: test_simple.py
(+2 files in other folders)
