[metadata]
name = chess_gif
version = 0.0.4
author = Mrunank Mistry
author_email = mrunankmistry52@gmail.com
description = A package for creating GIFs of chess game from PGN files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fork52/chess_gif
project_urls =
    Bug Tracker = https://github.com/fork52/chess_gif/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    python-chess
    pyvips
    imageio
    pygifsicle
    Pillow
zip_safe = False
include_package_data = True

[options.packages.find]
where = src